// Vitest Snapshot v1

exports[`Secret > Accessors > Allows to set data key on stringData 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "test": "Zm9v",
    },
    "kind": "Secret",
    "metadata": {
      "labels": {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-77f7g47dgb",
    },
    "stringData": {
      "test": "bar",
    },
  },
]
`;

exports[`Secret > Accessors > Metadata getter 1`] = `
ApiObjectMetadataDefinition {
  "_additionalAttributes": {
    "labels": {
      "prunable": "true",
      "test": "true",
    },
    "name": Lazy {
      "producer": {
        "produce": [Function],
      },
    },
    "namespace": undefined,
  },
  "annotations": {},
  "finalizers": [],
  "labels": {
    "prunable": "true",
    "test": "true",
  },
  "name": Lazy {
    "producer": {
      "produce": [Function],
    },
  },
  "namespace": undefined,
  "ownerReferences": [],
}
`;

exports[`Secret > Accessors > Throws when trying to set stringData key on data 1`] = `"Secret data key \\"test\\" is already used in stringData, which takes precedence"`;

exports[`Secret > Loading files > Encoding data value from file's contents 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "file.enc": "c2VjcmV0IyEyMw==",
    },
    "kind": "Secret",
    "metadata": {
      "labels": {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-g7hfd9465k",
    },
  },
]
`;

exports[`Secret > Loading files > Encoding data value from file's contents with custom key 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "greeting.enc": "c2VjcmV0IyEyMw==",
    },
    "kind": "Secret",
    "metadata": {
      "labels": {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-hb7bh85tb5",
    },
  },
]
`;

exports[`Secret > Props > Empty Secret 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Secret",
    "metadata": {
      "labels": {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-5m7k5t56kf",
    },
  },
]
`;

exports[`Secret > Props > Secret from props 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "foo": "c2VjcmV0IyEyMw==",
    },
    "immutable": true,
    "kind": "Secret",
    "metadata": {
      "annotations": {
        "annotation": "test",
      },
      "labels": {
        "label": "test",
        "prunable": "true",
      },
      "name": "test-c8eb60f8-2f6d9fk5k8",
    },
    "stringData": {
      "bar": "hello",
    },
    "type": "Opaque",
  },
]
`;
